--- a/index.html
+++ b/index.html
@@ -4,4 +4,11 @@
     <div class="input-group">
       <label>"Username"</label>
       <input type="textplaceholder="Masukkan Username"required>
-    </div>
+    </div
+<div class="input-group">
+  <label>Password</label>
+  <input type="password"placeholder="Masukan Password">
+</div>
+    <button type="submit">Masuk</button>
+  </form>
+</div>
